[gd_scene load_steps=5 format=2]

[ext_resource path="res://_Game/Scripts/scr_item_info_menu.gd" type="Script" id=2]
[ext_resource path="res://_Game/Scenes/UI/item_3d_view.tscn" type="PackedScene" id=3]
[ext_resource path="res://_Game/UI/Themes/FabLab_Theme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.176471, 0.176471, 0.176471, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="UI_ItemInfoMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -240.0
margin_right = 400.0
margin_bottom = 240.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 480.0
rect_min_size = Vector2( 500, 450 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/panel = SubResource( 1 )

[node name="InfoText" type="RichTextLabel" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -500.0
margin_bottom = -110.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 7
size_flags_vertical = 7
bbcode_enabled = true
bbcode_text = "Item Info Text"
text = "Item Info Text"

[node name="Item3DView" parent="VBoxContainer/Panel" instance=ExtResource( 3 )]
margin_left = 310.0
margin_top = 20.0
margin_right = 790.0
margin_bottom = 340.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Label" type="Label" parent="VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = 125.0
margin_right = 350.0
margin_bottom = 175.0
rect_min_size = Vector2( 480, 0 )
size_flags_horizontal = 7
size_flags_vertical = 5
text = "ITEM_INFO_3D_HELP"
align = 1
autowrap = true

[node name="CloseButton" type="Button" parent="VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.0
margin_top = -45.0
margin_right = 59.0
margin_bottom = -15.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "BUTTON_CLOSE"

[connection signal="pressed" from="VBoxContainer/Panel/CloseButton" to="." method="exit_window"]
